--- a/CompSciMerchStore/pom.xml
+++ b/CompSciMerchStore/pom.xml
@@ -14,6 +14,19 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>  <!--or <release>10</release>-->
+                </configuration>
+            </plugin>
+        </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
