--- a/CompSciMerchStore/pom.xml
+++ b/CompSciMerchStore/pom.xml
@@ -50,6 +50,11 @@
           <version>${junit.jupiter.version}</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.9.8</version>
+      </dependency>
   </dependencies>
 
 </project>
