FIXED THE LOGGER BBY.

--- a/CompSciMerchStore/src/main/resources/logger.properties
+++ b/CompSciMerchStore/src/main/resources/logger.properties
@@ -4,7 +4,7 @@ handlers= java.util.logging.ConsoleHandler,java.util.logging.FileHandler
 sun.awt.level=SEVERE
 javax.swing.level=SEVERE
 java.awt.level=SEVERE
-Software3471.Exam2.level=ALL
+DysfunctionalDesigners.CompSciMerchStore.level=ALL
 java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %4$s %2$s %5$s%6$s%n
 
 # Console Logging
