--- a/.gitignore
+++ b/.gitignore
@@ -136,4 +136,4 @@ local.properties
 \.idea/
 
 CompSciMerchStore/src/main/resources/NEXT_SALE_ID\.txt
-CompSciMerchStore/logger.log
+CompSciMerchStore/logger.*
