--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ local.properties
 CompSciMerchStore/src/main/resources/NEXT_SALE_ID\.txt
 CompSciMerchStore/logger.*
 CompSciMerchStore/reports.*
+Production/*
