--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ CompSciMerchStore/src/main/resources/NEXT_SALE_ID\.txt
 CompSciMerchStore/logger.*
 CompSciMerchStore/reports.*
 Production/*
+Javadoc/*
